fix(address) - updating zip alignment

--- a/src/platform/elements/form/extras/address/Address.scss
+++ b/src/platform/elements/form/extras/address/Address.scss
@@ -36,7 +36,6 @@ novo-address {
   }
   .street-address {
     flex: 3 3 75%;
-    
     padding: 0 0 5px !important;
   }
   .apt {
@@ -56,7 +55,7 @@ novo-address {
     }
   }
   .zip {
-    flex: 1 0 19.5%;
+    flex: 1 0 19.4%;
     padding: 5px 0 !important;
   }
   .country-name {
@@ -64,7 +63,8 @@ novo-address {
     padding: 10px 0 0 !important;
   }
   .disabled {
-    i.required-indicator.bhi-circle, i.required-indicator.bhi-check {
+    i.required-indicator.bhi-circle,
+    i.required-indicator.bhi-check {
       border-bottom: 1px dashed lighten($dark, 30%) !important;
     }
   }
